added one more drag select to test

--- a/widget-from-scratch/plugin-demo.html
+++ b/widget-from-scratch/plugin-demo.html
@@ -23,7 +23,8 @@
 
       <p>This plugin demonstrates a drag-select jQuery plugin.</p>
 
-      <p><div class="drag-select-me"><p class="alignLeft">Left</p> <p class="alignRight">Right</p></div></p>
+      <div class="drag-select-sex"></div>
+      <div class="drag-select-yesno"></div>
     </div>
 
     <!-- We wrap up by loading up jQuery, then Bootstrap, then our plugins,
