added more examples showcasing shapes and colors of switches

--- a/widget-from-scratch/plugin-demo.html
+++ b/widget-from-scratch/plugin-demo.html
@@ -11,7 +11,6 @@
 
     <!-- Sometimes, a plugin needs "companion" CSS.  That is fine. -->
     <link rel="stylesheet" href="jquery.drag-select.css">
-
   </head>
     
   <body>
@@ -23,6 +22,11 @@
 
       <div class="drag-select-sex"></div>
       <div class="drag-select-yesno"></div>
+      <div class="drag-select-onoff"></div>
+      <div class="drag-select-mf"></div>
+      <div class="drag-select-OI"></div>
+      <div class="drag-select-MALEFEMALE"></div>
+
     </div>
 
     <!-- We wrap up by loading up jQuery, then Bootstrap, then our plugins,
