changed the input to be the switch instead of the radio buttons

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -108,17 +108,9 @@
 
                 <br>
                 <p>Select your character's <strong>gender</strong>.</p>
-                  <div class="btn-group btn-group-justified" data-toggle="buttons">
-                    <label id="create-male" class="btn btn-default">
-                      <input type="radio"> Male
-                    </label>
-                    <label id="create-female" class="btn btn-default">
-                      <input type="radio"> Female
-                    </label>
-                  </div>
-                  <div id="switch-container">
-                   <div class="create-sex"></div>
-                 </div>
+                <div id="create-sex-container">
+                   <div id="create-sex"></div>
+                </div>
                 <br>
                 <p>Roll for your character's <strong>level</strong>.</p>
                 <div class="input-group">
@@ -165,16 +157,8 @@
 
               <br>
               <p>Change your character's <strong>gender</strong>.</p>
-              <div class="btn-group btn-group-justified" data-toggle="buttons">
-                <label id="edit-male" class="btn btn-default">
-                  <input type="radio"> Male
-                </label>
-                <label id="edit-female" class="btn btn-default">
-                  <input type="radio"> Female
-                </label>
-              </div>
-              <div id="switch-container">
-                <div class="create-sex"></div>
+              <div id="edit-sex-container">
+                <div id="edit-sex"></div>
               </div>
             </div>
             <div class="modal-footer">
