--- a/widget-from-scratch/plugin-demo.html
+++ b/widget-from-scratch/plugin-demo.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>jQuery Plugin Demos</title>
+    <title>Drag-Select Widget Demos</title>
 
     <link rel="stylesheet"
           href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
