changed the name from create and eddit sex to create and edit gender; modified the rpg.js file to be functional, implmented it using a helper function

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -108,8 +108,8 @@
 
                 <br>
                 <p>Select your character's <strong>gender</strong>.</p>
-                <div id="create-sex-container">
-                   <div id="create-sex"></div>
+                <div id="create-gender-container">
+                   <div id="create-gender"></div>
                 </div>
                 <p>Roll for your character's <strong>level</strong>.</p>
                 <div class="input-group">
@@ -156,8 +156,8 @@
 
               <br>
               <p>Change your character's <strong>gender</strong>.</p>
-              <div id="edit-sex-container">
-                <div id="edit-sex"></div>
+              <div id="edit-gender-container">
+                <div id="edit-gender"></div>
               </div>
             </div>
             <div class="modal-footer">
