Inline comments and notes for assignment 1126.

--- a/widget-from-scratch/plugin-demo.html
+++ b/widget-from-scratch/plugin-demo.html
@@ -20,6 +20,7 @@
 
       <p>This plugin demonstrates a drag-select jQuery plugin.</p>
 
+      <!-- JD: Nice variety you have here. -->
       <div class="drag-select-sex"></div>
       <div class="drag-select-yesno"></div>
       <div class="drag-select-onoff"></div>
