Inline comments and notes for Assignment 1017 and 1024 resubmissions.

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -61,11 +61,12 @@
 
           <div class="btn-group btn-group-justified" data-toggle="buttons">
             <label id="edit-character" href="#editModal" data-toggle="modal" class="btn btn-info">
-              <input type="radio">
+              <input type="radio"> <!-- JD: Are these radio buttons even needed anymore? -->
               <span id="edit-glyph" class="glyphicon glyphicon-edit white page-icons"></span>
             </label>
             <label id="delete-character" href="#deleteModal" data-toggle="modal" class="btn btn-danger">
-              <input type="radio">
+              <input type="radio"> <!-- JD: You did clean out the bad name, but now, in this
+                                            state, they are actually of no use at all. -->
               <span id="delete-glyph" class="glyphicon glyphicon-trash white page-icons"></span>
             </label>
           </div>
